# happenings-ng

./: .gitignore  .rustfmt.toml  Cargo.toml  Justfile  arse.toml  build.rs  build.sh  deps.tree  happenings.toml.example  history.txt  justfile  leptosfmt.toml  taplo.toml  thunder-collection_happenings.json  thunder-collection_square.json  tree
.cargo/: config.toml
.lsp/.cache/: db.transit.json
backend/: Cargo.toml  build.rs
backend/migrations/: 0001-roles.surql  0002-slots.surql  Untitled-1.ipynb  Untitled-1.json
backend/src/: build.rs  error_handling.rs  main.rs  middleware.rs
common/: Cargo.toml  tree
common/.cargo/: config.toml
common/src/: axum.rs  booking.rs  db.rs  error_handling.rs  event.rs  generic_id.rs  lib.rs  person.rs  role.rs  schema.rs  square_api.rs  surreal.rs  ticket.rs  user.rs
common/src/auth/: mod.rs  oauth.rs  password.rs  session.rs
common_old/: Cargo.toml
frontend/: Cargo.toml
frontend/src/: app.rs  book_event.rs  email_field.rs  error_handling.rs  events.rs  field.rs  icon_button.rs  lib.rs  navbar.rs  not_found.rs  reactive_list.rs  sign_in.rs  slot_state.rs  users.rs  utils.rs
frontend/src/components/: mod.rs  modal.rs
frontend/src/components/controls/: checkbox.rs  email.rs  mod.rs  name.rs  phonenumber.rs  slot_selector.rs  text.rs  ticket.rs  ticket_type.rs
happenings/: Cargo.toml  build.rs
happenings/src/: axum.rs  booking.rs  bookings.rs  config.rs  db.rs  event.rs  events.rs  lib.rs  main.rs  people.rs  person.rs  square_api.rs  tickets.rs
happenings/src/auth/: mod.rs  oauth.rs  session.rs
happenings_backend/: Cargo.toml
happenings_backend/src/: error_handling.rs  main.rs  server_fns.rs
happenings_backend/src/auth/: mod.rs  oauth.rs  password.rs
happenings_frontend/: Cargo.toml
happenings_frontend/src/: app.rs  book_event.rs  error_handling.rs  events.rs  navbar.rs  reactive_list.rs  sign_in.rs  users.rs
happenings_frontend/src/components/controls/: checkbox.rs  phonenumber.rs  text.rs  ticket.rs  ticket_type.rs
happenings_lib/: Cargo.toml
happenings_lib/src/: db.rs  event.rs  generic_id.rs  person.rs  ticket.rs
happenings_lib/src/auth/: oauth.rs  password.rs  session.rs
happenings_macro/: Cargo.toml
happenings_macro/src/: lib.rs
leptos-datatable/: Cargo.toml
leptos-datatable/examples/basic/: Cargo.toml  index.html  index.scss
leptos-datatable/examples/basic/src/: main.rs
leptos_axum_bodge/: Cargo.toml
leptos_axum_bodge/src/: lib.rs
leptos_axum_hack/: Cargo.toml
leptos_axum_hack/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: db_client.sh  db_server.sh
src/: config.rs  db.rs  error_handling.rs  main.rs  oauth.rs  server.rs  server_fns.rs
src/auth/: mod.rs  oauth.rs  password.rs
static/: bulma.min.css  index.html  loader.css
tools/: EventMaker.ipynb
