
[package]
  edition = "2021"
  name = "common"
  version = "0.1.0"

[dependencies]
  anyhow = { workspace = true }
  cfg-if = { workspace = true }
  chrono = { workspace = true, features = ["serde"] }
  indexmap = { workspace = true }
  leptos = { workspace = true }
  macros = { workspace = true }
  oauth2 = { workspace = true, default-features = false }
  rand = { workspace = true }
  reqwest = { workspace = true, default-features = false, features = [
    "cookies",
    "json",
    "rustls-tls",
    "trust-dns",
  ] }
  rust_decimal = { workspace = true }
  rust_decimal_macros = { workspace = true }
  serde = { workspace = true, features = ["derive"] }
  tracing = { workspace = true }
  uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
  axum = { workspace = true }
  axum-extra = { workspace = true }
  axum-macros = { workspace = true }
  dotenv = { workspace = true }
  figment = { workspace = true, features = ["env", "toml"] }
  futures = { workspace = true }
  futures-util = { workspace = true }
  hyper = { workspace = true }
  hyper-util = { workspace = true, features = [
    "http1",
    "server-auto",
    "tokio",
  ] }
  # leptos_axum_hack = { workspace = true } #why does this not work??
  leptos_axum_hack = { path = "../leptos_axum_hack" }
  mime_guess = { workspace = true }
  oauth2 = { workspace = true, features = ["reqwest"] }

  once_cell = { workspace = true }
  phonenumber = { workspace = true }
  sanitizer = { workspace = true }
  scopeguard = { workspace = true }
  serde_qs = { workspace = true }
  sha256 = { workspace = true }
  surrealdb = { workspace = true } #features = ["kv-mem", "kv-rocksdb"]
  tokio = { version = "1.34.0", features = [
    "full",
    "macros",
    "rt-multi-thread",
  ] }
  tokio-util = { workspace = true }
  tower = { workspace = true }
  tower-http = { workspace = true, features = ["trace", "tracing"] }
  tracing-subscriber = { workspace = true, features = ["env-filter"] }

  # [target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
  #   axum-macros = { workspace = true }
  # [build-dependencies]
  #   anyhow = "1.0.75"
  #   jobserver = "0.1.27"
  #   wasm-bindgen-cli-support = "0.2.89"

[dev-dependencies]
  axum-test = "14.0.0"
