[lib]
 crate-type = ["cdylib"]

[package]
 name = "frontend"
 version = "0.1.0"
 edition = "2021"

[dependencies]
 leptos = { version = "0.5.4", features = ["nightly", "csr"] }
 leptos_macro = { version = "0.5.4", features = ["nightly", "csr"] }
 leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
 serde = { version = "1.0.193", features = ["derive"] }
 reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "trust-dns",
  "json",
 ] }
 wasm-bindgen = "0.2.89"
 common = { path = "../common" }
 console_log = "1.0.0"
 console_error_panic_hook = "0.1.7"
 log = "0.4.20"
 leptos-use = { version = "0.9.0", features = ["serde_json", "serde"] }
 anyhow = "1.0.75"
 validator = { version = "0.16.1", features = [
  "phone",
  "validator_derive",
  "derive",
 ] }
 serde_json = "1.0.108"
 serde_qs = "0.12.0"
 happenings = { path = "../happenings" }
 leptos-struct-table = { version = "0.6.0", features = ["chrono", "uuid"] }
 async-trait = "0.1.77"
 chrono = "0.4.31"
 leptos_icons = { version = "0.1.0", features = [
  "FaEnvelopeSolid",
  "FaTriangleExclamationSolid",
  "FaCheckSolid",
  "FaPlusSolid",
  "FaTrashSolid",
  "FaUserSolid",
  "FaPhoneSolid",
  "FaBasketShoppingSolid",
 ] }
 indexmap = "2.1.0"
 uuid = "1.6.1"
 rust_decimal_macros = "1.33.1"
 email_address = "0.2.4"
 phonenumber = "0.3.3"
wasm-cookies = "0.2.1"
url = "2.5.0"
tracing = "0.1.40"
 # ticket = "0.2.0"
