[lib]
  crate-type = ["cdylib"]

[package]
  edition = "2021"
  name = "frontend"
  version = "0.1.0"

[dependencies]
  common = { workspace = true }

  anyhow = { workspace = true }
  async-trait = { workspace = true }
  chrono = { workspace = true }
  console_error_panic_hook = { workspace = true }
  console_log = { workspace = true }
  email_address = { workspace = true }
  icondata = { workspace = true }
  indexmap = { workspace = true }
  leptos = { workspace = true, features = ["csr", "nightly"] }
  leptos-struct-table = { workspace = true, features = ["chrono", "uuid"] }
  leptos-use = { workspace = true, features = ["serde", "serde_json"] }
  leptos_icons = { workspace = true }
  leptos_macro = { workspace = true, features = ["csr", "nightly"] }
  leptos_router = { workspace = true, features = ["csr", "nightly"] }
  log = { workspace = true }
  once_cell = { workspace = true }
  reqwest = { workspace = true, default-features = false, features = [
    "cookies",
    "json",
    "rustls-tls",
    "trust-dns",
  ] }
  rust_decimal = { workspace = true }
  rust_decimal_macros = { workspace = true }
  serde = { workspace = true, features = ["derive"] }
  serde_json = { workspace = true }
  serde_qs = { workspace = true }
  tracing = { workspace = true }
  url = { workspace = true }
  uuid = { workspace = true }
  wasm-cookies = "0.2.1"
itertools = "0.12.1"
class_list = "0.1.7"
