[package]
name = "happenings"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tokio = { version = "1.34.0", features = ["full"] }
dotenv = "0.15.0"
tracing = "0.1.40"
axum = "0.7.2"
hyper = "1.0.1"
tower = "0.4.13"
hyper-util = { version = "0.1.1", features = ["server-auto", "tokio", "http1"] }
oauth2 = "4.4.2"

[build-dependencies]
wasm-bindgen-cli-support = "0.2.89"
frontend = { path = "../frontend", artifact = "cdylib", target = "wasm32-unknown-unknown" }
