
[package]
 name = "happenings"
 version = "0.1.0"
 edition = "2021"

[dependencies]
 common = { path = "../common" }
 anyhow = "1.0.75"
 rand = "0.8.5"
 getrandom = { version = "0.2.11", features = ["js"] }
 leptos = "0.5.4"
 reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "trust-dns",
  "json",
 ] }
 chrono = { version = "0.4.31", features = ["serde"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tracing = "0.1.40"
 oauth2 = "4.4.2"
 cfg-if = "1.0.0"
 rust_decimal = "1.33.1"
 scopeguard = "1.2.0"
 happenings_macro = { path = "../happenings_macro" }
rust_decimal_macros = "1.33.1"
uuid = "1.6.1"
indexmap = "2.1.0"
derive_builder = "0.12.0"
phonenumber = "0.3.3"
sanitizer = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 axum = "0.7.2"
 tokio = { version = "1.34.0", features = [
  "full",
  "macros",
  "rt-multi-thread",
 ] }
 surrealdb = { version = "1.0.0", features = ["kv-mem", "kv-rocksdb"] }
 dotenv = "0.15.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

 hyper = "1.0.1"
 tower = "0.4.13"
 hyper-util = { version = "0.1.1", features = [
  "server-auto",
  "tokio",
  "http1",
 ] }

 rust-embed = "8.1.0"
 mime_guess = "2.0.4"
 figment = { version = "0.10.12", features = ["toml", "env"] }
 tower-http = { version = "0.5.0", features = ["tracing", "trace"] }
 futures-util = "0.3.29"
 sha256 = "1.4.0"
 serde_qs = "0.12.0"
 leptos_axum = "0.5.4"
 axum-macros = "0.4.0"
 tokio-util = "0.7.10"
 once_cell = "1.19.0"
 futures = "0.3.30"

[build-dependencies]
 anyhow = "1.0.75"
 jobserver = "0.1.27"
 wasm-bindgen-cli-support = "0.2.89"
 # frontend = { path = "./frontend", optional = true }
 #  frontend = { path = "./frontend", artifact = "cdylib", target = "wasm32-unknown-unknown" }

[dev-dependencies]
 axum-test = "14.0.0"
 # frontend = { path = "frontend", artifact = "cdylib", target = "wasm32-unknown-unknown" }
 # frontend = { path = "frontend" }

 # [features]
 # build-binary = ["frontend"]
