
[package]
  edition = "2021"
  name = "leptos_axum_hack"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  axum = { workspace = true }
  axum-extra = { workspace = true, features = ["cookie"] }
  leptos = { workspace = true, features = ["ssr"] }
  once_cell = { workspace = true }
  parking_lot = { workspace = true }
  scopeguard = { workspace = true }
  tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
  tokio-util = { workspace = true, features = ['rt'] }

[build-dependencies]
  axum-macros = { workspace = true }
